--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "unistd.h": "c",
         "pthread.h": "c",
         "sqlite3.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "inet.h": "c"
     }
 }
